--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="images/fav-icon.png" type="image/x-icon">
     <script src="js/script.js" defer></script>
     <title>Afghan rugs online store</title>
   </head>
