--- a/index.html
+++ b/index.html
@@ -182,25 +182,25 @@
           <img src="images/new.jpeg" alt="">
         </div>
         <div class="for-form md:col-span-2">
-          <form  class="text-center">
+          <form  class="text-center" name="order">
             <div class="md:flex items-center justify-center my-4">
             <div class="flex md:flex-row mx-2 space-x-2 text-sm items-center justify-center space-y-2">
             <label for="name" >Name</label>
-            <input type="text" id="name" class="rounded-xl" placeholder="  Nazir">
+            <input type="text" id="name" name="name" class="rounded-xl" placeholder="  Nazir">
             </div>
              <div class="flex md:flex-row mx-2 space-x-2 text-sm items-center justify-center space-y-2">
             <label for="email">Email</label>
-            <input type="text" id="email" class="rounded-xl" placeholder="  example@email.com">
+            <input type="text" id="email" name="email" class="rounded-xl" placeholder="  example@email.com">
             </div>
             </div>
             <div class="md:flex items-center justify-center">
              <div class="flex md:flex-row mx-2 space-x-2 text-sm items-center justify-center space-y-2">
             <label for="product">Ref#</label>
-            <input type="text" id="product" class="rounded-xl" placeholder="  product id">
+            <input type="text" id="product" name="rug-code" class="rounded-xl" placeholder="  product id">
             </div>
             <div class="flex md:flex-row mx-2 space-x-2 text-sm items-center justify-center space-y-2">
             <label for="add">Address</label>
-            <input type="text" id="add" class="rounded-xl" placeholder="  Seattle">
+            <input type="text" id="add" name="address" class="rounded-xl" placeholder="  Seattle">
             </div>
             
             </div>
