--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
           <img src="images/new.jpeg" alt="">
         </div>
         <div class="for-form md:col-span-2">
-          <form  class="text-center" name="order">
+          <form  class="text-center" name="order" netlify>
             <div class="md:flex items-center justify-center my-4">
             <div class="flex md:flex-row mx-2 space-x-2 text-sm items-center justify-center space-y-2">
             <label for="name" >Name</label>
